Добавлены классы для стилизации
Добавлены классы для удобства стилизации, изменен порядок элементов в разметке.

--- a/catalog.html
+++ b/catalog.html
@@ -81,8 +81,8 @@
                   <td>450 руб.</td>
                 </tr>
               </table>
-              <b>Итого: 750 руб.</b>
-              <a class="button" href="#">Оформить заказ</a>
+              <b class="basket-total">Итого: 750 руб.</b>
+              <a class="button basket-btn" href="#">Оформить заказ</a>
             </div>
           </li>
         </ul>
