--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </ul>
       </nav>
       <div class="schedule-info">
-          <p>С 10 до 20, ежедневно
+          <p>С 10 до 20, ежедневно <br>
             <a href="tel:+7-812-450-25-25">8 812 450-25-25</a>
           </p>
       </div>
@@ -153,8 +153,8 @@
       <section class="about">
         <h2 class="about-title">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
         <p class="about-item about-item-icecream" >Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-        <p class="about-item about-item-leaf" >Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
         <p class="about-item about-item-cow" >Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+        <p class="about-item about-item-leaf" >Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
         <p class="about-item about-item-temp" >Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
       </section>
 
@@ -167,7 +167,7 @@
         <div class="subscribe">
           <h2 class="visually-hidden">Подписаться на новости</h2>
           <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-          <form action="https://echo.htmlacademy.ru" method="POST">
+          <form class="subscribe-form" action="https://echo.htmlacademy.ru" method="POST">
             <label class="visually-hidden" for="subscribe-email-field">Введите адрес электронной почты</label>
             <input type="email" name="email" id="subscribe-email-field" placeholder="Электронная почта">
             <button class="button" type="submit">Отправить</button>
@@ -197,8 +197,8 @@
       </ul>
       <ul class="useful-info">
         <li class="mark"><a href="#">Для поставщиков</a></li>
-        <li><a href="#">О производстве</a></li>
         <li><a href="#">Наши документы</a></li>
+        <li><a href="#">О производстве</a></li>
         <li><a href="#">Экологические стандарты</a></li>
       </ul>
       <p class="copyright">
