--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
             <a>Каталог</a>
             <ul class="submenu">
               <li class="submenu-item"><a href="#">Новинки</a></li>
-              <li class="submenu-item active"><a href="catalog.html">Сливочное</a></li>
+              <li class="submenu-item active"><a>Сливочное</a></li>
               <li class="submenu-item"><a href="#">Щербеты</a></li>
               <li class="submenu-item"><a href="#">Фруктовый лед</a></li>
               <li class="submenu-item"><a href="#">Мелорин</a></li>
