--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   <div class="page-wrapper">
     <footer class="footer">
       <div class="contacts-info">
-        <p>Адрес главного офиса и офлайн-магазина: <b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b></p>
+        <p>Адрес главного офиса <br> и офлайн-магазина: <b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b></p>
         <p>Для заказов по телефону: <b>8 812 450-25-25</b> (с 10 до 20 ежедневно)</p>
         <a class="button contacts-info-btn" href="#">Форма обратной связи</a>
       </div>
