--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
         <div class="special-banner special-banner-raspberry">
           <h3 class="special-banner-title">Малинка даром!</h3>
           <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-          <a class="button" href="#">Хочу варенье!</a>
+          <a class="button special-banner-btn" href="#">Хочу варенье!</a>
         </div>
         <div class="special-banner special-banner-chocolates">
           <h3 class="special-banner-title">Шоколадки даром!</h3>
           <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-          <a class="button" href="#">Хочу шоколадки!</a>
+          <a class="button special-banner-btn" href="#">Хочу шоколадки!</a>
         </div>
       </section>
 
@@ -141,7 +141,7 @@
             <a class="catalog-item-image" href="#">
               <img src="img/icecream-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
             </a>
-            <p class="catalog-item-price">310₽<span>/кг</span></p>
+            <p class="catalog-item-price">415₽<span>/кг</span></p>
             <a href="#">
               <h3 class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</h3>
             </a>
@@ -170,7 +170,7 @@
           <form class="subscribe-form" action="https://echo.htmlacademy.ru" method="POST">
             <label class="visually-hidden" for="subscribe-email-field">Введите адрес электронной почты</label>
             <input type="email" name="email" id="subscribe-email-field" placeholder="Электронная почта">
-            <button class="button" type="submit">Отправить</button>
+            <button class="button subscribe-btn" type="submit">Отправить</button>
           </form>
         </div>
       </div>
@@ -186,7 +186,7 @@
     <footer class="footer">
       <div class="contacts-info">
         <p>Адрес главного офиса <br> и офлайн-магазина: <b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b></p>
-        <p>Для заказов по телефону: <b>8 812 450-25-25</b> (с 10 до 20 ежедневно)</p>
+        <p>Для заказов по телефону: <b class="contacts-info-tel">8 812 450-25-25</b> (с 10 до 20 ежедневно)</p>
         <a class="button contacts-info-btn" href="#">Форма обратной связи</a>
       </div>
       <ul class="socials">
