--- a/catalog.html
+++ b/catalog.html
@@ -88,7 +88,7 @@
         </ul>
       </nav>
       <div class="schedule-info">
-        <p>С 10 до 20, ежедневно
+        <p>С 10 до 20, ежедневно <br>
           <a href="tel:+7-812-450-25-25">8 812 450-25-25</a>
         </p>
       </div>
@@ -119,7 +119,13 @@
 
           <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-title">Цена: 100 руб. - 500 руб.</legend>
-            <div class="range-controls"></div>
+            <div class="range-controls">
+              <div class="scale">
+                <div class="bar"></div>
+              </div>
+              <div class="range-toggle range-toggle-min"></div>
+              <div class="range-toggle range-toggle-max"></div>
+            </div>
           </fieldset>
 
           <fieldset class="catalog-filter-group">
