--- a/catalog.html
+++ b/catalog.html
@@ -67,7 +67,7 @@
                   </td>
                   <td class="basket-item-name">Пломбир с апельсиновым джемом</td>
                   <td class="basket-item-price">1,5кг x <span>200 руб.</span></td>
-                  <td>300 руб.</td>
+                  <td class="basket-item-total">300 руб.</td>
                 </tr>
                 <tr>
                   <td class="basket-order-remove">
@@ -78,7 +78,7 @@
                   </td>
                   <td class="basket-item-name">Клубничный пломбир с присыпкой из белого шоколада</td>
                   <td class="basket-item-price">1,5кг x <span>300 руб.</span></td>
-                  <td>450 руб.</td>
+                  <td class="basket-item-total">450 руб.</td>
                 </tr>
               </table>
               <b class="basket-total">Итого: 750 руб.</b>
@@ -96,8 +96,8 @@
 
     <main class="main-content">
       <ul class="breadcrumbs">
-        <li><a class="breadcrumbs-link" href="index.html">Главная</a></li>
-        <li><a class="breadcrumbs-link" href="#">Каталог</a></li>
+        <li class="breadcrumbs-item"><a href="index.html">Главная</a></li>
+        <li class="breadcrumbs-item"><a href="#">Каталог</a></li>
         <li><a>Сливочное</a></li>
       </ul>
 
@@ -316,13 +316,13 @@
       </section>
 
       <ul class="pagination-list">
-        <li><a class="pagination-button prev disabled" aria-label="Предыдущая"></a></li>
+        <li class="pagination-button prev disabled"><a aria-label="Предыдущая"></a></li>
         <li class="pagination-item active"><a>1</a></li>
         <li class="pagination-item"><a href="#">2</a></li>
         <li class="pagination-item"><a href="#">3</a></li>
         <li class="pagination-item"><a href="#">4</a></li>
         <li class="pagination-item"><a href="#">5</a></li>
-        <li><a class="pagination-button forward active" aria-label="Следующая"></a></li>
+        <li class="pagination-button forward active"><a aria-label="Следующая"></a></li>
       </ul>
     </main>
 
