--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
@@ -48,7 +48,7 @@
                 <input type="text" name="email" id="email-field" placeholder="Электронная почта" required>
                 <label class="visually-hidden" for="password-field">Введите пароль</label>
                 <input type="password" name="password" id="password-field" placeholder="Пароль" required>
-                <button class="button" type="submit">Войти</button>
+                <button class="button login-btn" type="submit">Войти</button>
                 <div class="login-links">
                   <a href="#">Забыли пароль?</a>
                   <a href="#">Новая регистрация</a>
@@ -67,7 +67,7 @@
                       <img src="img/basket-icecream-1.jpg" width="33" height="33" alt="Пломбир с апельсиновым джемом">
                     </td>
                     <td class="basket-item-name">Пломбир с апельсиновым джемом</td>
-                    <td class="basket-item-price">1,5кг x <span>200 руб.</span></td>
+                    <td class="basket-item-price">1,5 кг x <span>200 руб.</span></td>
                     <td class="basket-item-total">300 руб.</td>
                   </tr>
                   <tr>
@@ -78,7 +78,7 @@
                       <img src="img/basket-icecream-2.jpg" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада">
                     </td>
                     <td class="basket-item-name">Клубничный пломбир с присыпкой из белого шоколада</td>
-                    <td class="basket-item-price">1,5кг x <span>300 руб.</span></td>
+                    <td class="basket-item-price">1,5 кг x <span>300 руб.</span></td>
                     <td class="basket-item-total">450 руб.</td>
                   </tr>
                 </table>
@@ -198,120 +198,120 @@
                 <img src="img/icecream-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
               </a>
               <p class="catalog-item-price">310₽<span>/кг</span></p>
-              <a href="#">
+              <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
               </a>
-              <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
+              <a class="button catalog-item-btn" href="#">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
               </a>
               <p class="catalog-item-price">380₽<span>/кг</span></p>
-              <a href="#">
+              <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочно-кофейное с кусочками шоколада</h3>
               </a>
-              <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
+              <a class="button catalog-item-btn" href="#">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
               </a>
               <p class="catalog-item-price">355₽<span>/кг</span></p>
-              <a href="#">
+              <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
               </a>
-              <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
+              <a class="button catalog-item-btn" href="#">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
               </a>
-              <p class="catalog-item-price">310₽<span>/кг</span></p>
-              <a href="#">
+              <p class="catalog-item-price">415₽<span>/кг</span></p>
+              <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</h3>
               </a>
-              <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
+              <a class="button catalog-item-btn" href="#">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
               </a>
               <p class="catalog-item-price">325₽<span>/кг</span></p>
-              <a href="#">
+              <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочное с брусничным джемом</h3>
               </a>
-              <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
+              <a class="button catalog-item-btn" href="#">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
               </a>
               <p class="catalog-item-price">410₽<span>/кг</span></p>
-              <a href="#">
+              <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочно-черничное с цельными ягодами черники</h3>
               </a>
-              <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
+              <a class="button catalog-item-btn" href="#">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
               </a>
               <p class="catalog-item-price">375₽<span>/кг</span></p>
-              <a href="#">
+              <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочно-лимонное с карамельной присыпкой</h3>
               </a>
-              <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
+              <a class="button catalog-item-btn" href="#">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
               </a>
               <p class="catalog-item-price">320₽<span>/кг</span></p>
-              <a href="#">
+              <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочное с шоколадной стружкой</h3>
               </a>
-              <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
+              <a class="button catalog-item-btn" href="#">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
               </a>
               <p class="catalog-item-price">440₽<span>/кг</span></p>
-              <a href="#">
+              <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочно-ванильное с кусочками шоколада</h3>
               </a>
-              <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
+              <a class="button catalog-item-btn" href="#">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-10.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
               </a>
               <p class="catalog-item-price">435₽<span>/кг</span></p>
-              <a href="#">
+              <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочноe с ментоловым сиропом</h3>
               </a>
-              <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
+              <a class="button catalog-item-btn" href="#">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
               </a>
               <p class="catalog-item-price">355₽<span>/кг</span></p>
-              <a href="#">
+              <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочное с кусочками черного шоколада</h3>
               </a>
-              <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
+              <a class="button catalog-item-btn" href="#">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
               </a>
               <p class="catalog-item-price">420₽<span>/кг</span></p>
-              <a href="#">
+              <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочное с мятным сиропом</h3>
               </a>
-              <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
+              <a class="button catalog-item-btn" href="#">Быстрый просмотр</a>
             </li>
           </ul>
         </section>
@@ -337,8 +337,8 @@
         </ul>
         <ul class="useful-info">
           <li class="mark"><a href="#">Для поставщиков</a></li>
-          <li><a href="#">О производстве</a></li>
           <li><a href="#">Наши документы</a></li>
+          <li><a href="#">О производстве</a></li>
           <li><a href="#">Экологические стандарты</a></li>
         </ul>
         <p class="copyright">
