--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
@@ -52,7 +52,7 @@
                 <input type="text" name="email" id="email-field" placeholder="Электронная почта" required>
                 <label class="visually-hidden" for="password-field">Введите пароль</label>
                 <input type="password" name="password" id="password-field" placeholder="Пароль" required>
-                <button class="button login-button" type="submit">Войти</button>
+                <button class="button login-btn" type="submit">Войти</button>
                 <div class="login-links">
                   <a href="#">Забыли пароль?</a>
                   <a href="#">Новая регистрация</a>
@@ -90,7 +90,7 @@
             <a class="button slider-button" href="#">Давайте оба!</a>
           </div>
           <div class="slider-item slider-item-3" id="slider-item-3">
-            <p class="slider-text">Пломбир с помадкой и клубничный щербет</p>
+            <p class="slider-text">Пломбир с помадкой <br> и клубничный щербет</p>
             <a class="button slider-button" href="#">Давайте оба!</a>
           </div>
         </section>
@@ -117,40 +117,40 @@
                 <img src="img/icecream-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
               </a>
               <p class="catalog-item-price">310₽<span>/кг</span></p>
-              <a href="#">
+              <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
               </a>
-              <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
+              <a class="button catalog-item-btn" href="#">Быстрый просмотр</a>
             </li>
             <li class="catalog-item hit">
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
               </a>
               <p class="catalog-item-price">380₽<span>/кг</span></p>
-              <a href="#">
+              <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочно-кофейное с кусочками шоколада</h3>
               </a>
-              <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
+              <a class="button catalog-item-btn" href="#">Быстрый просмотр</a>
             </li>
             <li class="catalog-item hit">
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
               </a>
               <p class="catalog-item-price">355₽<span>/кг</span></p>
-              <a href="#">
+              <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
               </a>
-              <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
+              <a class="button catalog-item-btn" href="#">Быстрый просмотр</a>
             </li>
             <li class="catalog-item hit">
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
               </a>
               <p class="catalog-item-price">415₽<span>/кг</span></p>
-              <a href="#">
+              <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</h3>
               </a>
-              <a class="button catalog-item-button" href="#">Быстрый просмотр</a>
+              <a class="button catalog-item-btn" href="#">Быстрый просмотр</a>
             </li>
           </ul>
         </section>
@@ -184,8 +184,7 @@
 
     <div class="map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
-      <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ac13f50ff4c181d8bd7c837a284ae5196f45f762cfb2bae7617707389a696e573&amp;source=constructor" width="100%" height="430" frameborder="0"></iframe>
-      <!-- <img src="img/map.jpg" width="1200" height="430" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург"> -->
+      <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ac13f50ff4c181d8bd7c837a284ae5196f45f762cfb2bae7617707389a696e573&amp;source=constructor" height="430"></iframe>
     </div>
 
     <div class="content-wrapper">
