Верстка доп. состояний + модальное окно
Верстка доп. состояний интерактивных элементов по макету, добавление состояния фокуса для чекбоксов и радиобаттонов. Стилизация и выравнивание модального окна. Доп. сжимание изображений.

--- a/catalog.html
+++ b/catalog.html
@@ -35,14 +35,14 @@
 
           <ul class="user-navigation">
             <li class="search">
-              <a href="#" aria-label="Поиск по сайту"></a>
+              <a href="search.html" aria-label="Поиск по сайту"></a>
               <form class="search-form" action="https://echo.htmlacademy.ru" method="GET">
                 <label class="visually-hidden" for="search-field">Поиск, введите запрос</label>
                 <input type="text" name="search" id="search-field" placeholder="Что ищем?">
               </form>
             </li>
             <li class="login">
-              <a href="#">Вход</a>
+              <a href="login.html">Вход</a>
               <form class="login-form" action="https://echo.htmlacademy.ru" method="POST">
                 <label class="visually-hidden" for="email-field">Введите адрес электронной почты</label>
                 <input type="text" name="email" id="email-field" placeholder="Электронная почта" required>
@@ -56,7 +56,7 @@
               </form>
             </li>
             <li class="basket active">
-              <a href="#">2 товара</a>
+              <a href="basket.html">2 товара</a>
               <div class="modal-basket">
                 <table class="basket-order">
                   <tr>
