--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 
           <ul class="user-navigation">
             <li class="search">
-              <a href="#" aria-label="Поиск по сайту"></a>
+              <a href="search.html" aria-label="Поиск по сайту"></a>
               <form class="search-form" action="https://echo.htmlacademy.ru" method="GET">
                 <label class="visually-hidden" for="search-field">Поиск, введите запрос</label>
                 <input type="text" name="search" id="search-field" placeholder="Что ищем?">
               </form>
             </li>
             <li class="login">
-              <a href="#">Вход</a>
+              <a href="login.html">Вход</a>
               <form class="login-form" action="https://echo.htmlacademy.ru" method="POST">
                 <label class="visually-hidden" for="email-field">Введите адрес электронной почты</label>
                 <input type="text" name="email" id="email-field" placeholder="Электронная почта" required>
@@ -192,7 +192,7 @@
         <div class="contacts-info">
           <p>Адрес главного офиса <br> и офлайн-магазина: <b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b></p>
           <p>Для заказов по телефону: <b class="contacts-info-tel">8 812 450-25-25</b> (с 10 до 20 ежедневно)</p>
-          <a class="button contacts-info-btn" href="#">Форма обратной связи</a>
+          <a class="button contacts-info-btn" href="contacts.html">Форма обратной связи</a>
         </div>
         <ul class="socials">
           <li><a class="social social-tw" href="#" aria-label="Глейси в Твиттер"></a></li>
@@ -224,7 +224,7 @@
           <input type="text" name="feedback-email" id="feedback-email-field" placeholder="Ваша почта для ответа?">
 
           <label class="visually-hidden" for="comment-field">Оставьте комментарий</label>
-          <textarea name="comment" id="comment-field" cols="10" rows="10" placeholder="Напишите что-нибудь..."></textarea>
+          <textarea name="comment" id="comment-field" placeholder="Напишите что-нибудь..."></textarea>
 
           <button class="button feedback-btn" type="submit">Отправить</button>
         </form>
