--- a/catalog.html
+++ b/catalog.html
@@ -342,7 +342,7 @@
           <li><a href="#">Экологические стандарты</a></li>
         </ul>
         <p class="copyright">
-          <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <a class="copyright-logo" href="https://htmlacademy.ru/intensive/htmlcss">
             <img src="img/logo-htmlacademy.svg" height="39" width="108" alt="HTML Academy логотип">
           </a>
           Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2018
