Изменения для стилизации
Объединены характеристики для инпутов, добавлено состояние для плейсхолдера. Символ рубля заменен на svg

--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style-min.css">
   <title>Каталог магазина Глейси</title>
 </head>
 
@@ -104,7 +104,6 @@
 
         <h1 class="main-title">Сливочное мороженое</h1>
 
-        <!-- Форма -->
         <section class="filters">
           <h2 class="visually-hidden">Фильтр товаров</h2>
           <form class="catalog-filter" action="https://echo.htmlacademy.ru" method="GET">
@@ -119,7 +118,7 @@
             </fieldset>
 
             <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-title">Цена: 100 руб. - 500 руб.</legend>
+              <legend class="catalog-filter-title">Цена: 100 руб. – 500 руб.</legend>
               <div class="range-controls">
                 <div class="scale">
                   <div class="bar"></div>
@@ -188,8 +187,6 @@
           </form>
         </section>
 
-        <!-- Конец формы -->
-
         <section class="catalog">
           <h2 class="visually-hidden">Каталог сливочного мороженого</h2>
           <ul class="catalog-list">
@@ -197,7 +194,7 @@
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
               </a>
-              <p class="catalog-item-price">310₽<span>/кг</span></p>
+              <p class="catalog-item-price">310<span>/кг</span></p>
               <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
               </a>
@@ -207,7 +204,7 @@
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
               </a>
-              <p class="catalog-item-price">380₽<span>/кг</span></p>
+              <p class="catalog-item-price">380<span>/кг</span></p>
               <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочно-кофейное с кусочками шоколада</h3>
               </a>
@@ -217,7 +214,7 @@
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
               </a>
-              <p class="catalog-item-price">355₽<span>/кг</span></p>
+              <p class="catalog-item-price">355<span>/кг</span></p>
               <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
               </a>
@@ -227,7 +224,7 @@
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
               </a>
-              <p class="catalog-item-price">415₽<span>/кг</span></p>
+              <p class="catalog-item-price">415<span>/кг</span></p>
               <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</h3>
               </a>
@@ -237,7 +234,7 @@
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
               </a>
-              <p class="catalog-item-price">325₽<span>/кг</span></p>
+              <p class="catalog-item-price">325<span>/кг</span></p>
               <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочное с брусничным джемом</h3>
               </a>
@@ -247,7 +244,7 @@
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
               </a>
-              <p class="catalog-item-price">410₽<span>/кг</span></p>
+              <p class="catalog-item-price">410<span>/кг</span></p>
               <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочно-черничное с цельными ягодами черники</h3>
               </a>
@@ -257,7 +254,7 @@
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
               </a>
-              <p class="catalog-item-price">375₽<span>/кг</span></p>
+              <p class="catalog-item-price">375<span>/кг</span></p>
               <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочно-лимонное с карамельной присыпкой</h3>
               </a>
@@ -267,7 +264,7 @@
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
               </a>
-              <p class="catalog-item-price">320₽<span>/кг</span></p>
+              <p class="catalog-item-price">320<span>/кг</span></p>
               <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочное с шоколадной стружкой</h3>
               </a>
@@ -277,7 +274,7 @@
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
               </a>
-              <p class="catalog-item-price">440₽<span>/кг</span></p>
+              <p class="catalog-item-price">440<span>/кг</span></p>
               <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочно-ванильное с кусочками шоколада</h3>
               </a>
@@ -287,7 +284,7 @@
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-10.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
               </a>
-              <p class="catalog-item-price">435₽<span>/кг</span></p>
+              <p class="catalog-item-price">435<span>/кг</span></p>
               <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочноe с ментоловым сиропом</h3>
               </a>
@@ -297,7 +294,7 @@
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
               </a>
-              <p class="catalog-item-price">355₽<span>/кг</span></p>
+              <p class="catalog-item-price">355<span>/кг</span></p>
               <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочное с кусочками черного шоколада</h3>
               </a>
@@ -307,7 +304,7 @@
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
               </a>
-              <p class="catalog-item-price">420₽<span>/кг</span></p>
+              <p class="catalog-item-price">420<span>/кг</span></p>
               <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочное с мятным сиропом</h3>
               </a>
