--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style-min.css">
   <title>HTML Academy: Глейси</title>
 </head>
 
@@ -116,7 +116,7 @@
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
               </a>
-              <p class="catalog-item-price">310₽<span>/кг</span></p>
+              <p class="catalog-item-price">310<span>/кг</span></p>
               <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
               </a>
@@ -126,7 +126,7 @@
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
               </a>
-              <p class="catalog-item-price">380₽<span>/кг</span></p>
+              <p class="catalog-item-price">380<span>/кг</span></p>
               <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочно-кофейное с кусочками шоколада</h3>
               </a>
@@ -136,7 +136,7 @@
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
               </a>
-              <p class="catalog-item-price">355₽<span>/кг</span></p>
+              <p class="catalog-item-price">355<span>/кг</span></p>
               <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
               </a>
@@ -146,7 +146,7 @@
               <a class="catalog-item-image" href="#">
                 <img src="img/icecream-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
               </a>
-              <p class="catalog-item-price">415₽<span>/кг</span></p>
+              <p class="catalog-item-price">415<span>/кг</span></p>
               <a class="catalog-item-link" href="#">
                 <h3 class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</h3>
               </a>
@@ -234,6 +234,6 @@
       </div>
     </div>
   </div>
-  <script src="js/main.js"></script>
+  <script src="js/main-min.js"></script>
 </body>
 </html>
