--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </ul>
         </nav>
         <div class="schedule-info">
-            <p>С 10 до 20, ежедневно <br>
+            <p>С 10 до 20, ежедневно
               <a href="tel:+7-812-450-25-25">8 812 450-25-25</a>
             </p>
         </div>
@@ -91,7 +91,7 @@
             <a class="button slider-button" href="#">Давайте оба!</a>
           </div>
           <div class="slider-item slider-item-3" id="slider-item-3">
-            <p class="slider-text">Пломбир с помадкой <br> и клубничный щербет</p>
+            <p class="slider-text">Пломбир с помадкой и&nbsp;клубничный щербет</p>
             <a class="button slider-button" href="#">Давайте оба!</a>
           </div>
         </section>
@@ -191,7 +191,7 @@
     <div class="content-wrapper">
       <footer class="footer">
         <div class="contacts-info">
-          <p>Адрес главного офиса <br> и офлайн-магазина: <b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b></p>
+          <p><span>Адрес главного офиса и офлайн-магазина:</span><b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b></p>
           <p>Для заказов по телефону: <b class="contacts-info-tel">8 812 450-25-25</b> (с 10 до 20 ежедневно)</p>
           <a class="button contacts-info-btn" href="contacts.html">Форма обратной связи</a>
         </div>
