--- a/catalog.html
+++ b/catalog.html
@@ -90,7 +90,7 @@
           </ul>
         </nav>
         <div class="schedule-info">
-          <p>С 10 до 20, ежедневно <br>
+          <p>С 10 до 20, ежедневно
             <a href="tel:+7-812-450-25-25">8 812 450-25-25</a>
           </p>
         </div>
